@@ -15,6 +15,8 @@ Changelog for 1.4.1
 * Fixed bug 1209, Types of Businesses report shows total discounts (Chris T)
 * Fixed bug 1210, Cannot list business reporting units (Chris T)
 * Fixed bug 1211, Sequences always set to allow input (Chris T)
+* Fixed bug 1212, opaque error when no tax form selected on report (Chris T)
+* Fixed bug 1213, Company db name not displated on some reports (Chris T)
 
 Chris T is Chris Travers
 Erik H is Erik Huelsmann
